k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api
  namespace: myapp
spec:
  type: ClusterIP
  selector:
    app: flask-api
  ports:
    - port: 8000
      targetPort: 8000
