k8s/postgres-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-headless
  namespace: myapp
spec:
  clusterIP: None 
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: myapp
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: postgres
  serviceName: "postgres-headless" 
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

  volumeClaimTemplates:
    - metadata:
        name: postgres-data 
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi 
---
apiVersion: v1
kind: Service
metadata:
  name: postgres 
  namespace: myapp
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
